<resources>
    <string name="app_name">ARchitect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="log_in">Inicia Sesión</string>
    <string name="app_subtitle">La forma más fácil de decorar tu hogar.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_toolbar">Buscar</string>
    <string name="catalogue_fragment">Catalogo de Productos</string>
    <string name="furniture_details_fragment">Detalles del Producto</string>
    <string name="redirect_AR_button">AR</string>
    <string name="edit_profile_fragment">Editar Perfil</string>
    <string name="edit_profile_button">Editar</string>
    <string name="foro_fragment">Foro</string>
    <string name="foro_details_fragment">Detalles del Posteo</string>
    <string name="home_fragment">Home</string>
    <string name="sign_up">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_fragment">Log In</string>
    <string name="saved_design">Diseños Guardados</string>
    <string name="custom_wall">Paredes Custom Guardadas</string>
    <string name="email">Email</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="profile_fragment">Perfil del Usuario</string>
    <string name="welcome">¡BIENVENIDO!</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="forgot_password">¿Olvidaste tu Contraseña?</string>
    <string name="send_email">Enviar Email</string>
    <string name="send_email_text">Verificar con tu email el cambio de contraseña.</string>
    <string name="living">Living</string>
    <string name="main_room">Habitacion</string>
    <string name="kitchen">Cocina</string>
    <string name="bathroom">Baño</string>
    <string name="dining_room">Comedor</string>
    <string name="outside">Exterior</string>
    <string name="HomeFragment">Home Page</string>
    <string name="hello_view_node">Hello ViewNode</string>
    <string name="put">Colocar</string>

    <string name="rescan_floor">Reiniciar</string>
    <string name="confirm_floor">Rellenar</string>
    <string name="cancel_place">Cancelar</string>
    <string name="confirm_place">Ubicar</string>
    <string name="save_floor">Guardar</string>
    <string name="load_floor">Cargar</string>
    <string name="floor_list">Pisos</string>
    <string name="design_list">Diseños</string>
    <string name="save_floor_popup_title">Guardar Piso</string>
    <string name="save_floor_popup_yes">Guardar</string>
    <string name="save_floor_popup_no">Cancelar</string>
    <string name="save_design_popup_title">Guardar Diseño</string>
    <string name="save_design_popup_yes">Guardar</string>
    <string name="save_design_popup_no">Cancelar</string>
    <string name="post_btn">Postear</string>
    <string name="post_title">Ingrese los datos del Post</string>

    <string name="products_text">Productos</string>
    <string name="greetings">¡Hola!</string>
    <string name="subtitle_login">Nos alegra que hayas vuelto!</string>
    <string name="phone_number">Teléfono</string>
    <string name="direction">Dirección</string>
    <string name="change_password"><u>Cambiar mi contraseña</u></string>
    <string name="edit_profile">Editar perfil</string>
    <string name="profile_pic_description">Profile picture</string>
    <string name="description">Descripción</string>
    <string name="redirect">Redirección</string>
    <string name="ar">AR</string>
    <string name="profile">Perfil</string>
    <string name="catalogue">Catalogo</string>
    <string name="delete_acount">Eliminar Cuenta</string>
    <string name="address">Direccion</string>
    <string name="old_password">Contraseña Actual</string>
    <string name="new_password">Contraseña Nueva</string>
    <string name="confirm_change_password">Cambiar Contraseña</string>
    <string name="edit_change_password">Cambiar mi Contraseña</string>
    <string name="no_saved_design_yet">No tiene diseños guardados aun</string>
    <string name="no_custom_walls_yet">No tiene paredes guardadas aun</string>
    <string name="remove_from_db_prod_title">Eliminar de BD</string>
    <string name="remove_from_db_prod_text">¿Estás seguro de que deseas eliminar este producto de la BD?</string>
    <string name="todos">Todos</string>
</resources>