<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_item_edit_profile"
        android:title="@string/edit_profile_fragment" />

    <item
        android:id="@+id/menu_item_designs"
        android:title="@string/saved_design" />

    <item
        android:id="@+id/logout_item"
        android:title="@string/logout" />

    <item
        android:id="@+id/delete_user_item"
        android:title="@string/delete_acount" />

    <item
        android:id="@+id/item_admin_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Opciones para Admins" >
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <item
                android:id="@+id/menu_item_delete_user_by_admin"
                android:title="Eliminar Usuario Todos" />

            <item
                android:id="@+id/menu_item_delete_products_by_admin"
                android:title="Eliminar Productos" />
        </menu>
    </item>

</menu>