<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/catalogue_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CatalogueFragment">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/catlogue_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/living_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/living" />

            <Button
                android:id="@+id/room_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/main_room" />

            <Button
                android:id="@+id/kitchen_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/kitchen" />

            <Button
                android:id="@+id/bathroom_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/bathroom" />

            <Button
                android:id="@+id/diningroom_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/dining_room" />

            <Button
                android:id="@+id/outside_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/outside" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/catlogue_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/catalogue_fragment"
        app:layout_constraintBottom_toTopOf="@+id/catalogue_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/catalogue_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catlogue_textView" />




</androidx.constraintlayout.widget.ConstraintLayout>