<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".fragments.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/profile_toolbar">

        <TextView
            android:id="@+id/profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/profile_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_toolbar"
            android:textColor="@color/white" />
       </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="274dp"
        android:layout_height="544dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar"
        app:layout_constraintVertical_bias="0.133">


        <ImageView
            android:id="@+id/profile_user_pic_image_view"
            android:layout_width="146dp"
            android:layout_height="138dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/profile_image_style"
            android:contentDescription="@string/profile_pic_description"/>

        <TextView
            android:id="@+id/profile_user_name_text_view"
            android:layout_width="269dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/input_text"
            android:enabled="false"
            android:gravity="center|start"
            android:hint="@string/user_name"
            android:padding="10dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/profile_email_text_view"
            android:layout_width="269dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/input_text"
            android:enabled="false"
            android:gravity="center|start"
            android:hint="@string/email"
            android:padding="10dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/profile_phone_number_text_view"
            android:layout_width="269dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/input_text"
            android:enabled="false"
            android:gravity="center|start"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/profile_direction_text_view"
            android:layout_width="269dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/input_text"
            android:enabled="false"
            android:gravity="center|start"
            android:hint="@string/direction"
            android:padding="10dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_common_style"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/change_password_text_view"
            android:layout_width="105dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/main_green"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>