<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".fragments.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="454dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_title_id"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/main_green"
            android:textSize="48sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/main_subtitle_id"
            android:layout_width="284dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_subtitle"
            android:textColor="@color/main_green"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_password_send_email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/send_email_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_password_email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_password_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/input_text"
                android:padding="15dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/send_email_reset_password_button"
            android:layout_width="200dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_common_style"
            android:text="@string/send_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>